# Social-Media-Report-Generator

./: .env.example  docker-compose.yaml  pyproject.toml
crawlers/: base.py  instagram.py  linkiden.py
models/: schemas.py  settings.py  templates.py
src/: db.py  generator.py  llm.py  main.py
